# transform-gizmo

./: Cargo.toml
crates/transform-gizmo/: Cargo.toml
crates/transform-gizmo-bevy/: Cargo.toml
crates/transform-gizmo-bevy/examples/: bevy_minimal.rs
crates/transform-gizmo-bevy/src/: lib.rs  render.rs
examples/bevy/: Cargo.toml
examples/bevy/src/: scene.rs
